--- a/.github/workflows/tbls.yml
+++ b/.github/workflows/tbls.yml
@@ -2,14 +2,18 @@ name: Generate Database Documentation
 
 on:
   push:
-  #   branches: [ main ]
-  # pull_request:
-  #   branches: [ main ]
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   generate-docs:
+    permissions:
+      checks: write
+      contents: write
+      pull-requests: write 
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
-
     services:
       db:
         image: postgres:15-alpine
@@ -23,37 +27,26 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.22.5'
+      - name: Install sql-migrate
+        run: go install github.com/rubenv/sql-migrate/...@latest
+      - name: Run migrations
+        run: |
+          sql-migrate up -config dbconfig.yml -env github
+          sql-migrate status -config dbconfig.yml -env github
+      - name: Install tbls
+        uses: k1low/setup-tbls@v1
+      - name: Generate database documentation
+        run: |
+          tbls doc --rm-dist
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: '1.22.5'
-
-    - name: Install sql-migrate
-      run: go install github.com/rubenv/sql-migrate/...@latest
-
-    - name: Run migrations
-      run: |
-        sql-migrate up -config dbconfig.yml -env development
-        sql-migrate status -config dbconfig.yml -env development
-
-    - name: Install tbls
-      run: |
-        curl -L https://git.io/tbls -o tbls
-        chmod +x tbls
-        sudo mv tbls /usr/local/bin/
-
-    - name: Generate database documentation
-      run: |
-        tbls doc postgres://postgres:postgres@db:5432/eb?sslmode=disable -f
-      
-    - name: Commit documentation
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add docs/
-        git commit -m "Update database documentation" -a || echo "No changes to commit"
-        git push
+      - uses: stefanzweifel/git-auto-commit-action@v3.0.0
+        with:
+          commit_message: Update redoc document
+          ref: ${{ github.head_ref }}
