--- a/dbconfig.yml
+++ b/dbconfig.yml
@@ -3,3 +3,8 @@ development:
   dir: ./migrations
   table: migration
   datasource: host=db port=5432 dbname=eb user=postgres password=postgres sslmode=disable
+github:
+  dialect: postgres
+  dir: ./migrations
+  table: migration
+  datasource: host=localhost port=5432 dbname=eb user=postgres password=postgres sslmode=disable
